--- a/package.json
+++ b/package.json
@@ -11,18 +11,23 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/mongoose": "^5.11.97",
+    "@types/redis": "^4.0.11",
     "@types/socket.io": "^3.0.2",
+    "bluebird": "^3.7.2",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "http": "^0.0.1-security",
+    "mongodb": "^5.1.0",
     "node-cache": "^5.1.2",
     "socket.io": "^4.6.1",
     "typedi": "^0.10.0"
   },
   "devDependencies": {
     "@types/body-parser": "^1.19.2",
+    "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.17",
     "@types/node": "^18.15.10",
     "concurrently": "^7.6.0",
